--- a/core/templates/pages/decks.html
+++ b/core/templates/pages/decks.html
@@ -3,42 +3,103 @@
 {% load static %}
 
 {% block layout %}
+
 <div class="flex flex-col items-center mx-10 md:mx-20">
     <h1 class="prose-2xl mb-4">{{ user.username }}'s Decks</h1>
+
+    <!-- Search Bar -->
+    <form method="GET" action="{% url 'decks' %}" class="mb-4">
+        <input type="text" name="q" placeholder="Search for cards" class="input input-bordered w-full max-w-md" />
+        <button type="submit" class="btn">Search</button>
+    </form>
+
+    <!-- Display Search Results -->
+    {% if search_results %}
+    <div class="grid grid-cols-6 gap-4">
+        {% for card in search_results %}
+        <div class="card">
+            <div class="card-img">
+                <img src="{{ card.img_png }}" alt="{{ card.cardName }}" class="scaled_image">
+            </div>
+            <div class="card-details">
+                <p class="card-title">{{ card.cardName }}</p>
+                <p>CMC: {{ card.cmc }}</p>
+                <p>Oracle Text: {{ card.oracle_text }}</p>
+                <p>ID: {{card.id}}</p>
+                <form method="POST" action="{% url 'add_card_to_deck' card.id %}">
+                    {% csrf_token %}
+                    <input type="hidden" name="card_id" value="{{card.id}}">
+                    <select name="deck_id">
+                        {% for deck in decks %}
+                        <option value="{{ deck.id }}">{{ deck.deckName }}</option>
+                        {% endfor %}
+                    </select>
+                    <button type="submit" class="btn">Add to Deck</button>
+                </form>
+                <!-- Add more card details as needed -->
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
+    <!-- Deck Form -->
     <form method="post" class="mb-4">
         {% csrf_token %}
         <div class="form-control">
             <input type="text" name="deck_name" placeholder="Deck Name" class="input input-bordered w-full max-w-xs" />
+        </div>
+        <div class="form-control">
             <button type="submit" class="btn">Add</button>
         </div>
+        <div class="form-control">
+            <label class="label cursor-pointer">
+                <span class="label-text">Public</span>
+                <input type="checkbox" id="is_public" name="is_public" {% if is_public %}checked="checked"{% endif %} class="checkbox" />
+            </label>
+        </div>
     </form>
+
+    <!-- Display Decks -->
     {% for deck in decks %}
     <div id="deck_{{ deck.id }}" class="flex flex-col">
         <div class="text-white font-bold py-2 px-2 rounded focus:outline-none">
             {{ deck.deckName }}
+            {% if deck.is_public %}
+            <span class="text-green-500">Public</span>
+            {% else %}
+            <span class="text-red-500">Private</span>
+            {% endif %}
         </div>
-        <div class="flex">
-            <button class="btn btn-primary" onclick="processCardData('{{ deck.id }}')">View Cards</button>
+        <div class="flex flex-wrap">
+            <!-- View Cards Button -->
+            <button class="btn btn-primary" onclick="toggleDropdownDeck('{{ deck.id }}')">View Cards</button>
 
-            <form method="post" class="mb-4">
-                {% csrf_token %}
-                <input type="hidden" name="deck_nameCard" value="{{ deck.deckName }}">
-                <div class="form-control">
-                    <input type="text" name="card_name" placeholder="Card Name" class="input input-bordered w-full max-w-xs" />
-                    <button type="submit" class="btn">Add Card</button>
-                </div>
-            </form>
+            <!-- Delete Deck Button -->
             <form method="post" action="{% url 'delete_deck' deck.id %}">
                 {% csrf_token %}
                 <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this deck?')">Delete</button>
             </form>
-        </div>
-        <div id="dropdown_{{ deck.id }}" class="dropdown-content hidden">
-            {% for card in deck.cards.all %}
-            <p>{{ card.cardName }}</p>
-            {% endfor %}
+
         </div>
 
+        <!-- Card Details Dropdown -->
+        <div id="dropdown_{{ deck.id }}" class="dropdown-content hidden">
+            <div class="grid grid-cols-5 gap-4">
+                {% for card in deck.cards.all %}
+                <div class="card">
+                    <div class="card-img">
+                        <img src="{{ card.img_small }}" alt="{{ card.cardName }}">
+                    </div>
+                    <div class="card-details">
+                        <p class="card-title">{{ card.cardName }}</p>
+                        <!-- Add more card details as needed -->
+                        <a href="{% url 'card_details' card.id %}" class="btn btn-primary">Show Details</a>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
     {% endfor %}
 </div>
@@ -46,142 +107,53 @@
 <div class="flex flex-col px-40">
     <div id="output"></div>
 </div>
-<!--Move this script. This just loads a pages with cards from fetching with api search-->
+
 <script>
-    async function processCardData(deckId) {
-        const deckDiv = document.getElementById('dropdown_' + deckId);
-        const cards = deckDiv.querySelectorAll('p'); // Get all paragraph elements containing card names
-        const query = Array.from(cards).map(card => card.textContent.trim()).join(' OR '); // Concatenate card names with 'OR' for the search query
-        await fetchAndProcessCards(query);
-    }
-
-    async function fetchAndProcessCards(query) {
-        const jsonData = await fetchJSONFromAPI(query);
-        if (jsonData) {
-            const outputDiv = document.getElementById('output');
-            outputDiv.innerHTML = ''; // Clear previous cards
-
-            jsonData.data.forEach((card, index) => {
-                const cardContainer = document.createElement('div');
-                cardContainer.classList.add('flip-card');
-
-                const cardInner = document.createElement('div');
-                cardInner.classList.add('flip-card-inner');
-
-                const frontSide = document.createElement('div');
-                frontSide.classList.add('flip-card-front');
-
-                const frontImage = document.createElement('img');
-                frontImage.src = findFrontImage(card);
-                frontImage.alt = card.name || 'Unknown Name';
-
-                frontSide.appendChild(frontImage);
-                cardInner.appendChild(frontSide);
-
-                const backSide = document.createElement('div');
-                backSide.classList.add('flip-card-back');
-
-                const backImage = document.createElement('img');
-                backImage.src = findBackImage(card);
-                backImage.alt = card.name || 'Unknown Name';
-
-                backSide.appendChild(backImage);
-                cardInner.appendChild(backSide);
-
-                const cardDetails = createCardDetails(card.name, card.set_name, card.rarity, card.artist);
-                frontSide.appendChild(cardDetails.cloneNode(true));
-                backSide.appendChild(cardDetails);
-
-                cardContainer.appendChild(cardInner);
-                outputDiv.appendChild(cardContainer);
-            });
-
-            // Toggle "clicked" class on card flip
-            outputDiv.querySelectorAll('.flip-card').forEach(card => {
-                card.addEventListener('click', function () {
-                    this.classList.toggle('clicked');
+    // AJAX request for searching cards
+    document.getElementById("search-form").addEventListener("submit", function (event) {
+        event.preventDefault(); // Prevent default form submission
+        const query = document.getElementById("search-input").value;
+        fetch(`/search/?q=${query}`)
+            .then(response => response.json())
+            .then(data => {
+                const searchResults = document.getElementById("search-results");
+                searchResults.innerHTML = ""; // Clear previous search results
+                data.cards.forEach(card => {
+                    const cardElement = document.createElement("div");
+                    cardElement.textContent = card.cardName;
+                    // Add more card details as needed
+                    searchResults.appendChild(cardElement);
                 });
+            })
+            .catch(error => {
+                console.error("Error fetching search results:", error);
             });
-        }
-    }
-
-    async function fetchJSONFromAPI(query) {
-        const apiUrl = `https://api.scryfall.com/cards/search?format=json&include_extras=false&include_multilingual=false&include_variations=false&order=name&page=$1&q=${query}&unique=print`;
-        try {
-            const response = await fetch(apiUrl);
-            const jsonData = await response.json();
-            return jsonData;
-        } catch (error) {
-            console.error('Error fetching JSON data:', error);
-            return null;
-        }
-    }
-
-    //card_faces fields and index is very important
-    function findFrontImage(card) {
-        if (card.card_faces && card.card_faces[0] && card.card_faces[0].image_uris) {
-            return card.card_faces[0].image_uris.normal || 'https://i.imgur.com/LdOBU1I.jpeg';
-        } else if (card.image_uris) {
-            return card.image_uris.normal || 'https://i.imgur.com/LdOBU1I.jpeg';
-        } else {
-            return 'https://i.imgur.com/LdOBU1I.jpeg';
-        }
-    }
-
-    //Have a default back card image
-    function findBackImage(card) {
-        if (card.card_faces && card.card_faces[1] && card.card_faces[1].image_uris) {
-            return card.card_faces[1].image_uris.normal || 'https://i.imgur.com/LdOBU1I.jpeg';
-        } else {
-            return 'https://i.imgur.com/LdOBU1I.jpeg';
-        }
-    }
-
-    function createCardDetails(name, setName, rarity, artist) {
-        const cardDetailsContainer = document.createElement('div');
-        cardDetailsContainer.classList.add('flip-card-details');
-
-        const nameLabel = document.createElement('span');
-        nameLabel.textContent = 'Name: ';
-        nameLabel.style.fontWeight = 'bold';
-        cardDetailsContainer.appendChild(nameLabel);
-
-        const nameText = document.createElement('span');
-        nameText.textContent = name || 'Unknown Name';
-        cardDetailsContainer.appendChild(nameText);
-
-        const setNameText = document.createElement('p');
-        setNameText.textContent = `Set: ${setName || 'Unknown Set'}`;
-        cardDetailsContainer.appendChild(setNameText);
-
-        const rarityText = document.createElement('p');
-        rarityText.textContent = `Rarity: ${rarity || 'Unknown Rarity'}`;
-        cardDetailsContainer.appendChild(rarityText);
-
-        const artistText = document.createElement('p');
-        artistText.textContent = `Artist: ${artist || 'Unknown Artist'}`;
-        cardDetailsContainer.appendChild(artistText);
-
-        return cardDetailsContainer;
-    }
+    });
 
     function toggleDropdownDeck(deckId) {
         var dropdown = document.getElementById('dropdown_' + deckId);
         dropdown.classList.toggle('hidden');
     }
+
+
 </script>
+
 
 <style>
     .flip-card {
-        width: 200px;
-        height: 300px;
+        width: 300px;
+        height: 400px;
         font-family: sans-serif;
         border-radius: 1rem;
         overflow-y: scroll;
         border: 1px solid transparent;
-        margin: 20px;
-        display: inline-block;
-        position: relative;
+    }
+
+    .title {
+        font-size: 1.5em;
+        font-weight: 900;
+        text-align: center;
+        margin: 0;
     }
 
     .flip-card-inner {
@@ -199,7 +171,7 @@
     }
 
     .flip-card-front, .flip-card-back {
-        box-shadow: 0 8px 14px 0 rgba(0, 0, 0, 0.2);
+        box-shadow: 0 8px 14px 0 rgba(0,0,0,0.2);
         position: absolute;
         display: flex;
         flex-direction: column;
@@ -210,6 +182,7 @@
         backface-visibility: hidden;
         border: 1px solid rgb(0, 0, 0);
         border-radius: 1rem;
+        background-color: grey;
     }
 
     .flip-card-front {
@@ -219,13 +192,7 @@
     .flip-card-back {
         color: rgb(0, 0, 0);
         transform: rotateY(180deg);
-        background-size: cover;
-        background-position: center;
-        overflow: hidden; /* Ensure text doesn't overflow */
-        opacity: 0; /* Initially hide card details */
-        transition: opacity 0.3s; /* Add transition effect */
     }
-
 
     .flip-card.clicked .flip-card-front {
         visibility: hidden;
@@ -233,48 +200,39 @@
 
     .flip-card.clicked .flip-card-back {
         visibility: visible;
-        opacity: 1; /* Show back card image when flipped */
     }
 
-    .flip-card:hover .flip-card-back {
-        opacity: 1; /* Always show back card image on hover */
-    }
-
-    .flip-card:hover .flip-card-details {
-        opacity: 1; /* Show card details on hover */
-    }
 
     .flip-card:hover {
         outline: 2px solid white;
     }
 
-    .flip-card img {
-        display: block;
-        border-radius: 10px;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+    .card {
+        position: relative;
     }
 
-    .flip-card-details {
+    .card-details {
+        display: none;
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: left;
-        opacity: 0; /* Initially hide card details */
-        z-index: 1;
-        color: white; /* Text color */
-        width: 90%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.8); /* semi-transparent background */
+        color: white;
         padding: 10px;
-        background-color: rgba(0, 0, 0, 0.723); /*This is to outline text */
-        border-radius: 10px;
-        backdrop-filter: blur(5px); /* Blur */
-        transition: opacity 0.3s;
     }
 
-    flip-card-details p {
-        margin: 5px 0; /* Add margin for spacing */
+    .card:hover .card-details {
+        display: block; /* Show card details when card is hovered */
     }
+
+    .scaled_image {
+        width: 100%;
+        height: auto;
+    }
+
+
+
 </style>
 {% endblock %}
