Update homepage, Sign In, Sign up, to Ux design.

--- a/core/templates/account/signup.html
+++ b/core/templates/account/signup.html
@@ -5,6 +5,16 @@
 {% endblock head_title %}
 {% block content %}
 
+<style>
+    /* Set the background image and other styles */
+    body {
+        background-image: url('/static/images/bkg_magic.jpg'); /* Path to your background image */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+</style>
+
 <h1 class="text-xl text-center underline">Sign Up</h1>
 
 <p class="text-center">Already have an account? <a href="/accounts/login/" class="btn-ghost text-blue-500">Sign in</a></p>
