--- a/core/templates/pages/homepage.html
+++ b/core/templates/pages/homepage.html
@@ -12,15 +12,48 @@
       color: #ffffff; 
       text-shadow: 2px 2px 4px rgba(0,0,0,0.5); 
   }
+
+  /* Style for buttons container */
+  .button-container {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+  }
+
+  /* Style for buttons */
+  .SignIn_Button button {
+      width: 200px; 
+      background-color: #1A4D2E;
+      color: #ffffff; 
+  }
+
+  .SignUp_Button button {
+      width: 200px; 
+      background-color: #1A4D2E;
+      color: #ffffff; 
+  }
 </style>
-  <div class="min-h-screen bg-fixed bg-center bg-no-repeat bg-cover" style="background-image: url('/static/images/bkg_magic.jpg');">
+<div class="min-h-screen bg-fixed bg-center bg-no-repeat bg-cover" style="background-image: url('/static/images/bkg_magic.jpg');">
   <div class="bg-black bg-opacity-60 min-h-screen flex justify-center items-center">
     <div class="text-center p-5">
-  <div class="hero-content text-center text-neutral-content">
-    <div class="max-w-md">
-      <!-- Add class to h1 tag for styling -->
-      <h1 class="mb-5 text-7xl font-bold tcg-binder-text">TCG Binder</h1>
-      <p class="mb-5 text-xl" style="color: yellow;">Welcome to TCG Binder, your ultimate digital companion for managing your trading card game collection with ease and precision. Whether you're a seasoned collector, a competitive player, or just starting out in the world of trading card games, TCG Binder offers the tools and features you need to organize, track, and showcase your collection like never before.</p>
+      <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+          <h1 class="mb-5 text-7xl font-bold tcg-binder-text">TCG Binder</h1>
+          <p class="mb-5 text-xl" style="color: yellow;">Welcome to TCG Binder, your ultimate digital companion for managing your trading card game collection with ease and precision. Whether you're a seasoned collector, a competitive player, or just starting out in the world of trading card games, TCG Binder offers the tools and features you need to organize, track, and showcase your collection like never before.</p>
+        </div>
+      </div>
+      <div class="button-container">
+        <div class="SignIn_Button">
+          <a href="http://127.0.0.1:8000/accounts/login/">
+          <button class="btn btn-warning">Sign In</button>
+        </div>
+        <!-- Modified SignUp button to link to signup.html -->
+        <div class="SignUp_Button">
+          <a href="http://127.0.0.1:8000/accounts/signup/">
+            <button class="btn btn-warning">Sign Up</button>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
